src/test/ui/associated-types/associated-type-tuple-struct-construction.stderr
error[E0575]: expected method or associated constant, found associated type `A::Assoc`
  --> $DIR/associated-type-tuple-struct-construction.rs:7:32
   |
LL |     let <Foo as A>::Assoc(n) = <Foo as A>::Assoc(2);
   |                                ^^^^^^^^^^^^^^^^^
   |
   = note: can't use a type alias as a constructor

error[E0575]: expected method or associated constant, found associated type `A::Assoc`
  --> $DIR/associated-type-tuple-struct-construction.rs:7:9
   |
LL |     let <Foo as A>::Assoc(n) = <Foo as A>::Assoc(2);
   |         ^^^^^^^^^^^^^^^^^
   |
   = note: can't use a type alias as a constructor

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0575`.
